[package]
name = "gus"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
winapi = { version = "0.3.9", features = ["wincon", "winuser", "winnt", "processthreadsapi", "psapi", "winnls"] }
winreg = "0.55.0"
hostname = "0.3.1"
os_info = "3.8.0"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
